pom.xml tests dependencies and plugins added